knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Contact_Relationship_Type__c/pqcrush__Contact_Relationship_Type__c.object-meta.xml
<CustomObject>
    <label>Relationship Type</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>