knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Contact_Relationship_Type__c/fields/pqcrush__Color__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Color__c</fullName>
    <description>The color of the Relationship Line in the RGB format #AABBCC</description>
    <inlineHelpText>The color of the Relationship Line in the RGB format #AABBCC</inlineHelpText>
    <label>Line Color</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>