knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Contact_Relationship_Type__c/fields/pqcrush__IsActive__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>