knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Contact_Relationship_Type__c/fields/pqcrush__Used_in_all_account_plans__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Used_in_all_account_plans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used in all Account Plans</label>
    <type>Checkbox</type>
</CustomField>