knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Contact_Relationship_Type__c/validationRules/pqcrush__Must_be_rgb_hex_form.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__Must_be_rgb_hex_form</fullName>
    <active>true</active>
    <description>Must be in the RGB hex form</description>
    <errorConditionFormula>NOT(REGEX(pqcrush__Color__c,&apos;^#(?:[0-9a-fA-F]{3}){1,2}$&apos;))</errorConditionFormula>
    <errorDisplayField>pqcrush__Color__c</errorDisplayField>
    <errorMessage>The color must be in the form #RRGGBB.  For example #0080FF</errorMessage>
</ValidationRule>